# legbot-MPC-WBC

./: .gitignore  CMakeLists.txt  LICENSE  LegBot-MPC-WBC-实物调试技术报告.md  README.md  control-params-test-file.ini  control-params-test-file.yaml  test-yaml.yaml  仿真实物代码验证测试报告.md
common/: CMakeLists.txt
common/include/: cppTypes.h
common/include/ControlParameters/: SimulatorParameters.h
common/include/Controllers/: FootSwingTrajectory.h
common/include/Dynamics/: Cheetah3.h  LegBot.h  MiniCheetah.h  Quadruped.h  spatial.h
common/include/Math/: orientation_tools.h
common/include/Utilities/: SharedMemory.h
common/src/Controllers/: DesiredStateCommand.cpp  LegController.cpp
common/src/Dynamics/: LegBot.cpp  Quadruped.cpp
common/test/: test_legbot_model.cpp
config/: legbot-defaults.yaml  legbot-initial_jpos_ctrl.yaml  legbot-mit-ctrl-user-parameters.yaml
models/MJCF/legbot/: BLOG_ALGORITHM_WALKTHROUGH.md  CHEETAH_SOFTWARE_INTEGRATION.md  README.md  TECHNICAL_REPORT.md  legbot_mpc_scene.xml  legbot_mpc_scene_active_high_stairs.xml  legbot_mpc_scene_collision.xml  legbot_mpc_scene_high_stairs.xml  legbot_mpc_scene_profile_stairs_06.xml  legbot_mpc_scene_profile_stairs_variable.xml  legbot_mpc_scene_project.xml  legbot_mpc_scene_stairs.xml  legbot_pinocchio.xml
models/legbot/: __init__.py  cfg.py  legbot_section001_np.py
models/legbot/xmls/: export_mujoco.py  legbot.xml  mjmodel.xml  scene.xml  scene_section001.xml  scene_section01.xml  scene_section02.xml  scene_section03.xml  scene_stairs.xml  scene_stairs_obstacles.xml  scene_world.xml
models/legbot_description/: legbot_training.xml
models/legbot_description/meshes/: legbot.xml
models/legbot_description/urdf/: legbot_description.urdf
mujoco_bridge/: CMakeLists.txt  LegBotMujocoKey3DryrunSim.cpp  LegBotMujocoSim.cpp
rc_test/: CMakeLists.txt
robot/: CMakeLists.txt
robot/include/: JPosInitializer.h  RobotRunner.h
robot/include/LegBotDDS/: LegBotDDSAdapters.h  LegBotJointMap.h  LegBotSafetySupervisor.h
robot/src/: JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
robot/src/rt/: rt_serial.cpp
scripts/: analyze_legbot_mjcf.py  make_types.sh  mujoco_legbot_walk.py
sim/: CMakeLists.txt
sim/src/: RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp
tools/: analyze_legbot_bridge_csv.py  legbot_model_check.cpp  legbot_real_bridge_dryrun.cpp  legbot_real_bridge_gait0_minimal.cpp
user/Example_Leg_InvDyn/: CMakeLists.txt
user/JPos_Controller/: CMakeLists.txt
user/MIT_Controller/: CMakeLists.txt  MIT_Controller.hpp  MIT_UserParameters.h
user/MIT_Controller/Controllers/WBC/: CMakeLists.txt  OSQPWrapper.hpp  PinocchioDynamics.cpp  PinocchioDynamics.hpp  QPWBC.cpp  QPWBC.hpp
user/MIT_Controller/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp
user/MIT_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  SolverMPC.cpp  convexMPC_interface.cpp  convexMPC_interface.h
user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  FSM_State_BalanceStand.cpp  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_RecoveryStand.cpp  FSM_State_StandUp.cpp  SafetyChecker.cpp
user/MiniCheetahSpi_Controller/: CMakeLists.txt
